# Socket-Programming-Haskell

./: README.md  chat-server.cabal  compile.sh  server.hs  start.sh
app/: Main.hs
src/: Client.hs  Lib.hs
