name:                chat-server
version:             0.1.0.0
synopsis:            CHAT SERVER implementation in Haskell 
description:         Refer to README.md file
homepage:            https://github.com/clantroopss/Socket-Programming-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Bhavik Mer
maintainer:          merb@tcd.ie
copyright:           2017 Bhavik Mer
category:            Socket Programming
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client, Lib
  build-depends:       base >= 4.7 && < 5, network, split, directory, iproute, hashtables, MissingH
  default-language:    Haskell2010

executable chat-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, network, parallel-io, split, hashtables
                     , chat-server
  default-language:    Haskell2010

test-suite chat-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chat-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clantroopss/Socket-Programming-Haskell
